fix: bump z-index of lightwindow
Introduced by git #tuleap/stable/9677730979bef6b920cad864b4888cc8d90ed822

Lightwindow is used by artifact link field to create & link a new
artifact while we are editing another one. Due to the recent bump of
z-index of the sidebar, the lightwindow modal is now under the sidebar.

The solution is to apply to lightwindow the same z-index than Tuleap
modals.

Closes request #35142: Create artifact from a link field modal is broken

--- a/src/themes/common/css/utils/_lightwindow.scss
+++ b/src/themes/common/css/utils/_lightwindow.scss
@@ -25,7 +25,7 @@
     display: none;
     visibility: hidden;
     position: absolute;
-    z-index: 2000;
+    z-index: 2005;
     top: 0;
     left: 0;
     width: 100%;
@@ -41,7 +41,7 @@
     display: none;
     visibility: hidden;
     position: absolute;
-    z-index: 2001;
+    z-index: 2006;
 
     /* REQUIRED */
 }
